--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           <header>
             <h2 class="title">Acrósticos</h2>
             <p class="subtitle">
-              <p>Segue abaixo o meu acróstico (e de outros contribuintes), não como modelo, mas para que vocês tenham uma ideia da atividade sugerida.</p>
+              <p>Segue abaixo o meu acróstico (e de alguns outros contribuintes), não como modelo, mas para que vocês tenham uma ideia da atividade sugerida.</p>
             </p>
           </header>
           <div class="pagination-container">
