Update final date

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <p class="subtitle">
               <p>Faça um acróstico com a frase: <b>IBIAJARA, MEU AMOR.</b></p>
               </br>
-              <p>Use da criatividade e expresse, por meio do acróstico, seu amor por essa terra querida. Não há, necessariamente, necessidade de rimas; basta que faça sentido. Espero receber seu acróstico <b>até o dia primeiro de maio deste ano de 2025.</b></p>
+              <p>Use da criatividade e expresse, por meio do acróstico, seu amor por essa terra querida. Não há, necessariamente, necessidade de rimas; basta que faça sentido. Espero receber seu acróstico <b>até o dia 30 de março deste ano de 2025.</b></p>
             </p>
           </header>
           <div class="testimonials box">
